--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
         <link href='style.css' rel='stylesheet' type='text/css'>
-        <title>SexValues</title>
+        <title>GenderValues</title>
         <link rel="icon" type="x-icon" href="icon.png">
         <link rel="shortcut icon" type="x-icon" href="icon.png">
         <meta charset="utf-8">
@@ -62,6 +62,42 @@ There are <b><u><span id="numOfQuestions"></span></u></b> questions in the test.
 <h2><a id="anchor">What are the eight values?</a></h2>
 <p>There are five axes - and each has two opposing values assigned to them. They are:</p>
 <div class="explanation_bg">
+        <div class="spacer">
+                <div class="explanation_blurb_left">
+                        <p class="value"><b style="color:#0099E5;">MASCULINE</b></p>
+                        <p class="blurb-text">
+                                Those with higher masculinity scores tent to have a more (traditionally) masculine personality
+                        </p>
+                </div>
+                <div class="explanation_axis">
+                        <p class="axis_name">PERSONALITY</p>
+                        <img class="arrow" src="double_arrow.svg"></img>
+                </div>
+                <div class="explanation_blurb_right">
+                        <p class="value"><b style="color:#E50099;">FEMININE</b></p>
+                        <p class="blurb-text">
+                                Those with higher masculinity scores tent to have a more (traditionally) masculine personality
+                        </p>
+                </div>
+        </div>
+        <div class="spacer">
+                <div class="explanation_blurb_left">
+                        <p class="value"><b style="color:#00b000;">NON-BINARY</b></p>
+                        <p class="blurb-text">
+                                People with higher non-binary personality scores have a personality that does not exclusively align with being male or female.
+                        </p>
+                </div>
+                <div class="explanation_axis">
+                        <p class="axis_name">PERSONALITY BINARYNESS</p>
+                        <img class="arrow" src="double_arrow.svg"></img>
+                </div>
+                <div class="explanation_blurb_right">
+                        <p class="value"><b style="color:#E50099;">BINARY</b></p>
+                        <p class="blurb-text">
+                                People with higher binary personality scores have a personality that does exclusively align with being male or female.
+                        </p>
+                </div>
+        </div>
         <div class="spacer">
                 <div class="explanation_blurb_left">
                         <p class="value"><b style="color:#0099E5;">MASCULINE</b></p>
